# ckRPC

./: CMakeLists.txt  README.md  build.sh
include/: lockqueue.h  logger.h  mprpcChannel.h  mprpcapplication.h  mprpcconfig.h  mprpccontroller.h  mprpcprovider.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpcChannel.cc  mprpcController.cc  mprpcapplication.cc  mprpcconfig.cc  mprpcprovider.cc  zookeeperutil.cc
test/: friend.proto  user.proto
test/callee/: friendservice.cc  userservice.cc
test/caller/: callfriendservice.cc  calluserservice.cc
